main menu e botoes implementado

--- a/cgi-bin/templates/main_menu.html
+++ b/cgi-bin/templates/main_menu.html
@@ -3,7 +3,26 @@
 <body>
 
 <h1>Main menu</h1>
-<p>Buttons</p>
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/ins_rem_cat';">
+    Inserir e remover categorias e sub-categorias
+  </button>
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/ins_rem_retailer';">
+    Inserir e remover um retalhista
+  </button>
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivm_event';">
+    Listar todos os eventos de reposição de uma IVM
+  </button>
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_all_subcat';">
+    Listar todas as sub-categorias de uma super-categoria
+  </button>
 
 </body>
 </html> 
