--- a/cgi-bin/templates/list_all_subcat.html
+++ b/cgi-bin/templates/list_all_subcat.html
@@ -3,7 +3,11 @@
 <body>
 
 <h1>Lista de todas as subcategorias da categoria dada</h1>
-<p>Buttons</p>
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/main';">
+    Main menu
+  </button>
+<p></p>
 
 </body>
 </html> 
