mudado de accout para categoria

--- a/cgi-bin/templates/insert_remove_cat.html
+++ b/cgi-bin/templates/insert_remove_cat.html
@@ -29,7 +29,7 @@
                     <td>{{ record[0] }}</td>
                     <td>{{ record[1] }}</td>
                     <td>{{ record[2] }}</td>
-                    <td><a href="remove_account?account_number={{ record[0] }}">Remover conta</a></td>
+                    <td><a href="remove_category?account_number={{ record[0] }}">Remover categoria</a></td>
                 </tr>
             {% endfor %}
         </tbody>
@@ -39,4 +39,4 @@
 {% endif %}
 
 </body>
-</html> 
+</html>
