criada nova pagina para pedir o nome da categoria

--- a/cgi-bin/templates/insert_remove_cat.html
+++ b/cgi-bin/templates/insert_remove_cat.html
@@ -33,5 +33,11 @@
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
 
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/insert_cat';">
+    Inserir categoria
+  </button>
+<p></p>
+
 </body>
 </html>
