Mudado o link do main menu para a raiz

--- a/cgi-bin/templates/insert_remove_cat.html
+++ b/cgi-bin/templates/insert_remove_cat.html
@@ -8,7 +8,7 @@
 
 <h1>Inserir ou remover categorias</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/main';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
   </button>
 <p></p>
