--- a/cgi-bin/templates/list_all_subcat.html
+++ b/cgi-bin/templates/list_all_subcat.html
@@ -4,7 +4,7 @@
 
 <h1>Lista de todas as subcategorias da categoria dada</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/main';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
   </button>
 <p></p>
