--- a/cgi-bin/templates/confirmation.html
+++ b/cgi-bin/templates/confirmation.html
@@ -8,7 +8,7 @@
 
 <h1>Sucesso!</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/main';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
   </button>
 
