--- a/cgi-bin/templates/insert_remove_retailer.html
+++ b/cgi-bin/templates/insert_remove_retailer.html
@@ -4,7 +4,7 @@
 
 <h1>Inserir ou remover retailers</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/main';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
   </button>
 <p></p>
