copiado o codigo de cat para retailer

--- a/cgi-bin/templates/insert_remove_retailer.html
+++ b/cgi-bin/templates/insert_remove_retailer.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <meta charset="utf-8">
+    <title>List accounts - Flask</title>
+</head>
+<body style="padding:20px">
 
-<h1>Inserir ou remover retailers</h1>
+<h1>Inserir ou remover categorias</h1>
 <p></p>
 <button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
   </button>
 <p></p>
+{% if cursor %}
+    <table border="2px">
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Remover</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for record in cursor %}
+                <tr>
+                    <td>{{ record[0] }}</td>
+                    <td><a href="remove_category?account_number={{ record[0] }}">Remover categoria</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% else %}
+    <p> Erro: não foi possível obter dados da base de dados!</p>
+{% endif %}
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/insert_cat';">
+    Inserir categoria
+  </button>
+<p></p>
 
 </body>
-</html> 
+</html>
