codigo adaptado para retailer

--- a/cgi-bin/templates/insert_cat.html
+++ b/cgi-bin/templates/insert_cat.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Inserir nova categoria</h2>
 <form action="create_cat" method="post">
-<p>Nome da nova categoria: <input type="text" name="nome_cat"/></p>
+<p>Nome da nova categoria: <input type="text" name="category_name"/></p>
 <p><input type="submit" value="Submit"/></p>
 </form>
 </body>
