--- a/cgi-bin/templates/insert_remove_cat.html
+++ b/cgi-bin/templates/insert_remove_cat.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>List accounts - Flask</title>
+    <title>Mostrar e mudar categorias - Flask</title>
 </head>
 <body style="padding:20px">
 
@@ -24,7 +24,7 @@
             {% for record in cursor %}
                 <tr>
                     <td>{{ record[0] }}</td>
-                    <td><a href="remove_category?account_number={{ record[0] }}">Remover categoria</a></td>
+                    <td><a href="remove_category?category_name={{ record[0] }}">Remover categoria</a></td>
                 </tr>
             {% endfor %}
         </tbody>
