--- a/cgi-bin/templates/main_menu.html
+++ b/cgi-bin/templates/main_menu.html
@@ -15,13 +15,27 @@
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivm_event';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivm_events';">
     Listar todos os eventos de reposição de uma IVM
   </button>
 
 <p></p>
 <button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_all_subcat';">
     Listar todas as sub-categorias de uma super-categoria
+  </button>
+
+
+<h2>
+  Teste de menu 3
+</h2>
+<form action="list_ivm_events" method="post">
+  <p><input type="hidden" name="ivm_sn" value="0"/></p>
+  <p><input type="submit" value="Listar todos os eventos de reposição de uma IVM"/></p>
+</form>
+
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/test';">
+    test
   </button>
 
 </body>
