--- a/cgi-bin/templates/insert_retailer.html
+++ b/cgi-bin/templates/insert_retailer.html
@@ -7,6 +7,7 @@
 <body>
 <h2>Inserir novo retailer</h2>
 <form action="create_retailer" method="post">
+<p>Tin do novo retailer: <input type="text" name="retailer_id"/></p>
 <p>Nome do novo retailer: <input type="text" name="retailer_name"/></p>
 <p><input type="submit" value="Submit"/></p>
 </form>
