--- a/cgi-bin/templates/list_ivm_events.html
+++ b/cgi-bin/templates/list_ivm_events.html
@@ -9,11 +9,6 @@
   </button>
 <p></p>
 
-<form action="list_ivm_events" method="post">
-<p>Procurar lista para a IVM: <input type="text" name="ivm_sn"/></p>
-<p><input type="submit" value="Submit"/></p>
-</form>
-
 {% if cursor %}
     <table border="2px">
         <thead>
@@ -35,6 +30,11 @@
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
 
+<p></p>
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivms';">
+    Previous menu
+  </button>
+<p></p>
 
 </body>
 </html> 
