mudado url do do ex3

--- a/cgi-bin/templates/main_menu.html
+++ b/cgi-bin/templates/main_menu.html
@@ -15,7 +15,7 @@
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivm_events';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivms';">
     Listar todos os eventos de reposição de uma IVM
   </button>
 
