--- a/cgi-bin/templates/list_cat.html
+++ b/cgi-bin/templates/list_cat.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Lista de todas as subcategorias da categoria dada</h1>
+<h1>Lista as categorias</h1>
 <p></p>
 <button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
     Main menu
@@ -13,13 +13,15 @@
     <table border="2px">
         <thead>
             <tr>
-                <th>Nomes</th>
+                <th>Categoria</th>
+                <th>Selecionar categoria</th>
             </tr>
         </thead>
         <tbody>
             {% for record in cursor %}
                 <tr>
                     <td>{{ record[0] }}</td>
+                    <td><a href="list_all_subcat?category_name={{ record[0] }}">Selecionar</a></td>
                 </tr>
             {% endfor %}
         </tbody>
@@ -28,11 +30,6 @@
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
 
-<p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_cat';">
-    Previous menu
-  </button>
-<p></p>
 
 </body>
 </html> 
