--- a/cgi-bin/templates/main_menu.html
+++ b/cgi-bin/templates/main_menu.html
@@ -20,10 +20,9 @@
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_all_subcat';">
+<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_cat';">
     Listar todas as sub-categorias de uma super-categoria
   </button>
-
 
 <p></p>
 <button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/test';">
