mudados links de localhost para web2

--- a/cgi-bin/templates/confirmation.html
+++ b/cgi-bin/templates/confirmation.html
@@ -8,7 +8,7 @@
 
 <h1>Sucesso!</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/';">
     Main menu
   </button>
 
