--- a/cgi-bin/templates/list_all_subcat.html
+++ b/cgi-bin/templates/list_all_subcat.html
@@ -4,7 +4,7 @@
 
 <h1>Lista de todas as subcategorias da categoria dada</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/';">
     Main menu
   </button>
 <p></p>
@@ -29,7 +29,7 @@
 {% endif %}
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_cat';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/list_cat';">
     Previous menu
   </button>
 <p></p>
