--- a/cgi-bin/templates/main_menu.html
+++ b/cgi-bin/templates/main_menu.html
@@ -5,22 +5,22 @@
 <h1>Main menu</h1>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/ins_rem_cat';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/ins_rem_cat';">
     Inserir e remover categorias e sub-categorias
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/ins_rem_retailer';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/ins_rem_retailer';">
     Inserir e remover um retalhista
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivms';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/list_ivms';">
     Listar todos os eventos de reposição de uma IVM
   </button>
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_cat';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/list_cat';">
     Listar todas as sub-categorias de uma super-categoria
   </button>
 
