--- a/cgi-bin/templates/insert_remove_cat.html
+++ b/cgi-bin/templates/insert_remove_cat.html
@@ -8,7 +8,7 @@
 
 <h1>Inserir ou remover categorias</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/';">
     Main menu
   </button>
 <p></p>
@@ -34,7 +34,7 @@
 {% endif %}
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/insert_cat';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/insert_cat';">
     Inserir categoria
   </button>
 <p></p>
