--- a/cgi-bin/templates/list_cat.html
+++ b/cgi-bin/templates/list_cat.html
@@ -4,7 +4,7 @@
 
 <h1>Lista as categorias</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/';">
     Main menu
   </button>
 <p></p>
