--- a/cgi-bin/templates/list_ivm_events.html
+++ b/cgi-bin/templates/list_ivm_events.html
@@ -4,7 +4,7 @@
 
 <h1>Lista de eventos da IVM dada</h1>
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/';">
     Main menu
   </button>
 <p></p>
@@ -31,7 +31,7 @@
 {% endif %}
 
 <p></p>
-<button onclick="window.location.href='http://localhost:8000/cgi-bin/test.cgi/list_ivms';">
+<button onclick="window.location.href='http://web2.ist.utl.pt/ist199303/test.cgi/list_ivms';">
     Previous menu
   </button>
 <p></p>
